--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 #     url = "https://github.com/adityatelange/hugo-PaperMod.git"
 [submodule "themes/PaperMod"]
 path = "themes/PaperMod"
-url = https://github.com/adityatelange/hugo-PaperMod  
+url = "https://github.com/adityatelange/hugo-PaperMod" 
